--- a/src/index.css
+++ b/src/index.css
@@ -5,10 +5,16 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-	/* background-color: #000; */
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+#root {
+	/* overflow: hidden; */
+	background-color: red;
+	height: 100vh;
+	background-color: #000;
 }
