--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+	/* background-color: #000; */
 }
 
 code {
@@ -13,8 +14,5 @@ code {
 }
 
 #root {
-	/* overflow: hidden; */
-	background-color: red;
 	height: 100vh;
-	background-color: #000;
 }
