mapbox alternative method of manually setting up maps is working; benefit is closer access to the mapboxgl api

--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,9 @@ code {
 	height: 100vh;
 	overflow: hidden;
 }
+
+.mapboxgl-popup-content,
+.mapbox-popup {
+	color: #34B379;
+	font-weight: bold;
+}
